@@ -6,6 +6,8 @@
 * Added stretch and loop markers to the AudioChannel and AudioSample widgets.
 * Added tk::Tab and tk::TabControl widgets.
 * Additional functions to work with coordinates provided in the tk::Graph: xy_to_axis, axis_to_xy.
+* Improved widget tk::Grid space allocation algorithm that eliminates rows/columns which contain
+  widgets that share space across other rows/columns. 
 * Updated build scripts.
 
 === 1.0.5 ===
